Add migrator and get songs and get song text
