# internal/delivery/http/routes.go
@@ -8,6 +8,8 @@ import (
 func MapRoutes(r fiber.Router, h handler.Handler) {
 	r.Get("/info", h.GetSongDetail())
 
+	r.Get(`songs`, h.GetSongs())
+	r.Get(`songs/text`, h.GetSongText())
 	r.Post(`songs`, h.CreateSong())
 	r.Patch(`songs/:songId`, h.UpdateSong())
 	r.Delete(`songs/:songId`, h.DeleteSong())
